fix fading & add config support for future.